--- a/docker-compose.alauda.yml
+++ b/docker-compose.alauda.yml
@@ -3,6 +3,8 @@ zipkin:
   ports:
     - "nginx-10-11-0-7:9411:9411/tcp"
   net: flannel
+  size: L
+  alauda_lb: ALB
 
 consul:
   image: consul
@@ -11,50 +13,60 @@ consul:
     - "nginx-10-11-0-7:8500:8500/tcp"
     - "nginx-10-11-0-7:8600:8600/tcp"
   net: flannel
+  size: L
+  alauda_lb: ALB
 
 service-b:
-  image:  spring-cloud-consul-example/service-b
+  image:  10.11.0.8:5000/spring-cloud-consul-example-service-b
   links:
-    - "consul"
-    - "hystrix-dashboard"
-    - "zipkin"
+    - "consul:consul"
+    - "hystrix-dashboard:hystrix-dashboard"
+    - "zipkin:zipkin"
   net: flannel
+  size: L
 
 service-a:
-  image:  spring-cloud-consul-example/service-a
+  image:  10.11.0.8:5000/spring-cloud-consul-example-service-a
   links:
-    - "consul"
-    - "service-b"
-    - "hystrix-dashboard"
-    - "zipkin"
+    - "consul:consul"
+    - "service-b:service-b"
+    - "hystrix-dashboard:hystrix-dashboard"
+    - "zipkin:zipkin"
   net: flannel
+  size: L
 
 admin-dashboard:
   image:  spring-cloud-consul-example/admin-dashboard
   ports:
     - "nginx-10-11-0-7:8040:8040/tcp"
   links:
-    - "service-a"
-    - "service-b"
-    - "zuul"
-    - "hystrix-dashboard"
-    - "consul"
+    - "service-a:service-a"
+    - "service-b:service-b"
+    - "zuul:zuul"
+    - "hystrix-dashboard:hystrix-dashboard"
+    - "consul:consul"
   net: flannel
+  size: L
+  alauda_lb: ALB
 
 zuul:
   image:  spring-cloud-consul-example/zuul
   ports:
     - "nginx-10-11-0-7:8060:8060/tcp"
   links:
-    - "consul"
-    - "service-a"
-    - "zipkin"
+    - "consul:consul"
+    - "service-a:service-a"
+    - "zipkin:zipkin"
   net: flannel
+  size: L
+  alauda_lb: ALB
 
 hystrix-dashboard:
   image:  spring-cloud-consul-example/hystrix-dashboard
   ports:
     - "nginx-10-11-0-7:8050:8050/tcp"
   links:
-    - "consul"
+    - "consul:consul"
   net: flannel
+  size: L
+  alauda_lb: ALB
