--- a/service-a/src/main/resources/bootstrap.yml
+++ b/service-a/src/main/resources/bootstrap.yml
@@ -30,7 +30,7 @@ spring:
   cloud:
     consul:
       discovery:
-        prefer-ip-address: true
+        prefer-ip-address: false
       host: consul
       port: 8500
       config:
