--- a/hystrix-dashboard/src/main/resources/bootstrap.yml
+++ b/hystrix-dashboard/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     consul:
       discovery:
-        prefer-ip-address: false
+        prefer-ip-address: true
       host: 127.0.0.1
       port: 8500
 
