--- a/service-a/src/main/resources/bootstrap.yml
+++ b/service-a/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
     consul:
       discovery:
         prefer-ip-address: true
-      host: consul
+      host: 127.0.0.1
       port: 8500
       config:
         enabled: true
@@ -30,7 +30,7 @@ spring:
   cloud:
     consul:
       discovery:
-        prefer-ip-address: false
+        prefer-ip-address: true
       host: consul
       port: 8500
       config:
