--- a/zuul/src/main/resources/bootstrap.yml
+++ b/zuul/src/main/resources/bootstrap.yml
@@ -44,7 +44,7 @@ spring:
   cloud:
     consul:
       discovery:
-        prefer-ip-address: false
+        prefer-ip-address: true
       host: consul
       port: 8500
   sleuth:
