--- a/service-a/build.gradle
+++ b/service-a/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-ribbon')
     compile('org.springframework.cloud:spring-cloud-starter-zipkin')
     compile('io.springfox:springfox-swagger2:2.6.1')
+    compile('io.springfox:springfox-swagger-ui:2.6.1')
 }
