--- a/service-b/build.gradle
+++ b/service-b/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-consul-all')
     compile('org.springframework.cloud:spring-cloud-starter-zipkin')
     compile('io.springfox:springfox-swagger2:2.6.1')
+    compile('io.springfox:springfox-swagger-ui:2.6.1')
 }
