--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
         mavenCentral()
     }
     ext {
-        springBootVersion = '1.4.2.RELEASE'
-        springCloudVersion = 'Camden.SR3'
+        springBootVersion = '1.5.9.RELEASE'
+        springCloudVersion = 'Edgware.SR2'
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -13,7 +13,7 @@ buildscript {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.0'
+    gradleVersion = '4.6'
 }
 
 repositories {
@@ -26,6 +26,7 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'spring-boot' 
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
